# fastapi_mongo_base_template

./: docker-compose.yml
app/: Dockerfile  main.py  pyproject.toml
app/server/: config.py  server.py
